force-app/main/default/objects/PublicationFacebook__c/PublicationFacebook__c.object-meta.xml
<CustomObject>
    <description>Référentiel pour le projet KAPTURE pour associer la page Facebook à un utilisateur selon son magasin d&apos;affectation</description>
    <label>Publication Facebook</label>
    <nameField>
        <displayFormat>PFA/{YYYY}/{0000000}</displayFormat>
        <label>Numéro</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publications Facebook</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>