force-app/main/default/objects/PublicationFacebook__c/fields/codeDR__c.field-meta.xml
<CustomField>
    <fullName>codeDR__c</fullName>
    <label>Code DR</label>
    <length>10</length>
    <type>Text</type>
</CustomField>