force-app/main/default/objects/PublicationFacebook__c/fields/codeDV__c.field-meta.xml
<CustomField>
    <fullName>codeDV__c</fullName>
    <label>Code DV</label>
    <length>10</length>
    <type>Text</type>
</CustomField>