force-app/main/default/objects/PublicationFacebook__c/fields/codeMagasin__c.field-meta.xml
<CustomField>
    <fullName>codeMagasin__c</fullName>
    <label>Code magasin</label>
    <length>10</length>
    <type>Text</type>
</CustomField>