force-app/main/default/objects/PublicationFacebook__c/fields/urls__c.field-meta.xml
<CustomField>
    <fullName>urls__c</fullName>
    <label>URLs</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>